WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59075
REGRESSION (
r64817
): Korean encoding alias KSC5601 does not work
https://bugs.webkit.org/show_bug.cgi?id=59075
Summary
REGRESSION (r64817): Korean encoding alias KSC5601 does not work
Alexey Proskuryakov
Reported
2011-04-20 22:25:19 PDT
Steps to reproduce: 1. Go to
http://cafe.naver.com/appleiphone
2. Select "전체글보기" below orange rectangle on the left side. Results: all Korean text is broken in an iframe at the right (unless you have your default encoding set to Korean). <
rdar://problem/9303233
>
Attachments
proposed fix
(4.54 KB, patch)
2011-04-20 22:30 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-20 22:30:02 PDT
Created
attachment 90494
[details]
proposed fix
WebKit Commit Bot
Comment 2
2011-04-21 00:04:12 PDT
Comment on
attachment 90494
[details]
proposed fix Clearing flags on attachment: 90494 Committed
r84473
: <
http://trac.webkit.org/changeset/84473
>
WebKit Commit Bot
Comment 3
2011-04-21 00:04:17 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2011-04-21 01:04:27 PDT
http://trac.webkit.org/changeset/84473
might have broken Leopard Intel Debug (Tests)
Darin Adler
Comment 5
2011-04-28 17:37:27 PDT
What made this regress?
Alexey Proskuryakov
Comment 6
2011-04-28 17:43:06 PDT
Bug 43554
(where we stopped ignoring non-alphanumeric characters in alias names).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug