2011-04-21  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION: Korean encoding alias KSC5601 does not work
        https://bugs.webkit.org/show_bug.cgi?id=59075
        <rdar://problem/9303233>

        * fast/encoding/char-decoding-expected.txt:
        * fast/encoding/char-decoding.html:
        Added tests for KSC_5601 (which worked, but wasn't tested), and KSC5601 (which was broken).
2011-04-21  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION: Korean encoding alias KSC5601 does not work
        https://bugs.webkit.org/show_bug.cgi?id=59075
        <rdar://problem/9303233>

        * platform/text/TextCodecICU.cpp: (WebCore::TextCodecICU::registerEncodingNames): Added a
        KSC5601 alias for KSC_5601, which effectively makes it windows-949.

Canonical link: https://commits.webkit.org/74212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84473 268f45cc-cd09-0410-ab3c-d52691b4dbfc